--- a/doc/li120914.bib
+++ b/doc/li120914.bib
@@ -1,3 +1,527 @@
+@article{doerr05-906,
+title={Magnetoelastic Investigations at Pr$_{1-x}$Ca$_x$MnO$_3$ (x=0.35,0.5)},
+author={M. Doerr and  G. Remenyi and M. Rotter and S. Sahling and N. Saint-Paul and M. Loewenhaupt},
+journal={J. Magn. Magn. Mat. (IF=1.212)},
+year=2005,
+note={},
+pages={906-909},
+volume={290-291}}
+
+@article{rotter05-52404,
+title={Forced Magnetostriction of Samarium Metal up to 33 tesla},
+author={M. Rotter and A. Lindbaum and M. Doerr and M. Loewenhaupt and H. M\"uller and E. Jobiliong and J. Brooks},
+journal={Phys. Rev. B (IF=3.107)},
+year=2005,
+pages=52404,
+volume={72},
+note={01 times cited (web of knowledge 27.5.08)}}
+
+@article{rotter05-113901,
+title={Sample Holder for Neutron Scattering in High Magnetic Fields},
+author={M. Rotter and K. P. Rotter and M. Doerr and 
+R. Schedler and M. Loewenhaupt and M. Enderle and W. Schmidt and P. Svoboda and J. Vejpravova},
+journal={Rev. Sci. Instr. (IF=1.541)},
+year=2005,
+pages=113901,
+volume=76,
+note={01 times cited (web of knowledge 27.5.08)}}
+
+@article{schedler05-911,
+title={Field dependence of the magnon dispersion in the Kondo lattice CeCu$_2$ up to 12~T},
+author={R. Schedler and U. Witte and M. Rotter and M. Loewenhaupt and W. Schmidt},
+journal={J. appl. Phys. (IF=2.316)},
+year=2005,
+pages="10A911",
+volume=97,
+note={01 times cited (web of knowledge 27.5.08)}}
+
+@article{raasch06-64402,
+title={Magnetic shape memory effect in RCu$_2$ (R = rare earth) antiferromagnets},
+author={S. Raasch and M. Doerr and A. Kreyssig and M. Loewenhaupt and M. Rotter and x. Chen and J. U. Hoffmann},
+journal={Phys. Rev. B (IF=3.107)},
+year=2005,
+pages=64402,
+volume=73,
+note={02 times cited (web of knowledge 27.5.08)}
+}
+
+
+@article{michor06-640,
+title={Unusual non-Fermi liquid behavior in Ceni$_9$Ge$_4$},
+author={H. Michor and D.~T. Adroja and E. Bauer and R. Bewley and D. Dobozanov and A. D. Hillier and G. Hilscher and U. Killer and M. Koza and S. Manalo and P. Manuel and M. Reissner and P. Rogl and M. Rotter and E. W. Scheidt},
+journal="Physica B (IF=0.872)",
+year=2006,
+pages="640-643",
+volume="378-380"}
+
+
+@article{rotter06-160,
+title={Magnetoelastic paradox: Absence of symmetry-breaking distortions
+    below T$_N$ in antiferromagnetic systems without orbital moment},
+author={M. Rotter and A. Lindbaum and M. Doerr and M. Loewenhaupt and A. Barcza and M. el Massalami and B. Beuneu},
+journal={Europhys. Lett. (IF=2.229)},
+year=2006,
+important="",
+pages={160-166},
+volume=75,
+note={05 times cited (scopus 27.5.08)},
+number=1}
+
+
+
+
+@article{frontzeck06-398,
+title={Magneto-crystalline anisotropy in R$_2$PdSi$_3$ (R =Tb, Dy, Ho, Er, Tm) single crystals},
+author={M. Frontzek and A. Kreyssig and M. Doerr and M. Rotter and G. Behr and W. L\"oser and I. Mazilu  and M. Loewenhaupt},
+journal={J. Magn. Magn. Mat. (IF=1.212)},
+year=2006,
+volume=301,
+note={17 times cited (scopus 5.1.12)},
+pages=398}
+
+@article{rotter06-224109,
+title={Structural, Thermodynamic and Transport Properties of ZrMn$_2$},
+journal={Phys. Rev. B (IF=3.107)},
+author={M. Rotter and  P. Rogl and A. Grytsiv and X. Q. Chen and R. Podloucky and W. Wolf and V.T. Witusiewicz and A. Saccone and H. Noel 
+and M. Doerr and A. Lindbaum and H. Michor and E. Bauer and S. Heathman and W. Kockelmann and J. Taylor},
+year=2006,
+pages=224109,
+note={02 times cited (web of knowledge 27.5.08)},
+volume=74}
+
+@article{doerr06-1239,
+title={Magnetoelastic Behavior Of Rare Earth Based Intermetallics In High Magnetic Fields Up To 33 T},
+journal={AIP Conf. Proc. },
+volume=850,
+year=2006,
+note={},
+author={M. Doerr and M. Rotter and J. Brooks and E. Jobiliong and A. Lindbaum and R. Vasic and M. Loewenhaupt },
+pages=1239}
+
+@article{doerr06-561,
+author={M. Doerr and W. Lorenz and M. Rotter and A. Barcza and M. D. Le and  J. Brooks and E. Jobiliong and  N. V. Kozlova and  J. Freudenberger and  M. Loewenhaupt},
+title={Magnetostriction of 4f-electron compounds in high magnetic fields},
+journal={J. Phys. Conf. Series},
+year=2006,
+volume=51,
+pages=561}
+
+@article{schneidewind06-1089,
+title={PANDA - first results from the cold three axes spectrometer at FRM-II},
+author={A. Schneidewind and P. Link and D. Etzdorf and R. Schedler and M. Rotter and M. Loewenhaupt},
+journal={Physica B (IF=0.872)},
+volume={378-380},
+year=2006,
+note={01 times cited (web of knowledge 27.5.08)},
+pages=1089}
+
+@article{rotter07-1383,
+title={The Magnetoelastic Paradox in GdAg$_2$ and GdRu$_2$Si$_2$},
+journal={J. Magn. Magn. Mat. (IF=1.212)},
+author={M. Rotter and  M. Doerr and M. Zschintzsch and A. Lindbaum and H. Sassik and G. Behr },
+year=2007,
+note={},
+volume=310,
+pages=1383}
+
+@article{wisniewski07-904,
+author={P. Wisniewski and M. Doerr and M. Rotter},
+title={Unusual domain and field-forced magnetostriction in U$_3$As$_4$ and U$_3$P$_4$},
+year=2007,
+journal={J. Magn. Mag. Mat. (IF=1.212)},
+note={},
+volume=310,
+pages=904}
+
+@article{svoboda07-1767,
+author={P. Svoboda and J. Vejpravova and M. Doerr and M. Rotter and J. U. Hoffmann and I. Satoh and T. Komatsubara},
+title={Ising-axis conversion in (Tb$_{0.5}$Y$_{0.5}$)Cu$_2$  },
+year=2007,
+journal={J. Magn. Mag. Mat. (IF=1.212)},
+volume=310,
+note={},
+pages=1767}
+
+@article{melnychenko07-216223,
+author={N. Melnychenko-Koblyuk  and  A. Grytsiv and  L. Fornasari and  H. Kaldarar and  H. Michor and F. R\"ohrbacher and M. Koza and E. Royanian and E. Bauer and P. Rogl  and M. Rotter and H. Schmid and F. Marabelli and A. Devishvili and M. Doerr and G. Giester},
+title={Ternary Clathrates Ba-Zn-Ge: Phase Equilibria, Crystal Chemistry and Physical Properties},
+year=2007,
+journal={J. Phys. Cond. Mat. (IF=2.038)},
+pages=216223,
+note={23 times cited (web of knowledge 5.1.2012)},
+volume=19}
+
+@article{melnychenko07-46203,
+author={N. Melnychenko-Koblyuk and A. Grytsiv and H. Kaldarar and H. Michor and F. R\"ohrbacher and E. Royanian and E. Bauer and P. Rogl and M. Rotter and H. Schmid and G. Giester},
+title={Ternary Clathrates Ba-Cd-Ge: Phase Equilibria, Crystal Chemistry and Physical Properties},
+journal={J. Phys.: Condens. Matter},
+volume=19,
+pages={46203(1-23)},
+year=2007}
+
+@article{rotter07-144421,
+author={M. Rotter and  A. Barcza and  M. Doerr and M.D. Le and  J. Brooks and  E. Jobiliong and J. Perenboom},
+title={ Spin-flop transition in samarium metal investigated by capacitance dilatometry in a steady magnetic field of 45 T},
+journal={Phys. Rev. B (IF=3.107)},
+volume={76},
+note={},
+pages=144421,
+year=2007}
+
+@article{melnychenko07-144118,
+author={N. Melnychenko-Koblyuk  and  A. Grytsiv and  P. Rogl and M. Rotter  and 
+E. Bauer and G. Durand and H. Kaldarar and R. Lackner and H. Michor and E. Royanian
+	and M. Koza and G. Giester},
+title={Clathrate Formation in the Ba-Pd-Ge System: Phase Equilibria, Crystal Structure, and Physical Properties},
+year=2007,
+journal={Phys. Rev. B (IF=3.107)},
+note={19 times cited (web of knowledge 5.1.2012)},
+volume={76},
+pages=144118}
+
+@article{bauer07-217001,
+author={E. Bauer and A. Grytsiv and X.Q. Chen and N. Melnychenko-Koblyuk and G. Hilscher and H. Kaldarar
+and  H. Michor and E. Royanian and G. Giester and M. Rotter and R. Podloucky and P Rogl},
+title={Superconductivity in Novel Ge-based  Skutterudites: \{Sr,Ba\}Pt$_4$Ge$_{12}$},
+year=2007,
+journal={Phys. Rev. Lett. (IF=7.072)},
+volume=99,
+important={},
+note={02 times cited (web of knowledge 27.5.08)},
+pages=217001}
+
+@article{melnychenko07-195124,
+author={N. Melnychenko-Koblyuk  and  A. Grytsiv and  P. Rogl and M. Rotter  and R. Lackner and E. Bauer and L. Fornasari and F. Marabelli and G. Giester},
+title={Structure and Physical Properties of Clathrate I Solid Solution Ba$_8$Pt$_x$Ge$_{46-x-y}$2$_y$ (2 = vacancy)},
+year=2007,
+volume=76,
+journal={Phys. Rev. B (IF=3.107)},
+note={28 times cited (scopus 5.1.2012)},
+pages=195124}
+
+
+
+@article{devishvili08-104218,
+author={A. Devishvili and M. Rotter and A. Lindbaum and A. Barcza and A. Hiess and  W. Schmidt and J. Vejpravova},
+title={Measuring Magnetostriction with Neutrons},
+year=2008,
+journal={J. Phys. Cond. Mat. (IF=2.038)},
+note={},
+volume=20,
+pages=104218}
+
+@article{rotter08-144301,
+author={M. Rotter and P. Rogl and A. Grytsiv and W. Wolf and M. Krisch and A. Mirone},
+title={Lattice Dynamics of Skutterudites - Inelastic Xray Scattering on CoSb$_3$},
+journal={Phys. Rev. B (IF=3.107)},
+year=2008,
+note={},
+pages=144301,
+volume=77}
+
+@article{jensen08-134408,
+author={J. Jensen and M. Rotter},
+title={Magnetic double-q ordering of tetragonal GdNi$_2$B$_2$C, a way to explain the magnetoelastic paradox},
+year=2008,
+pages=134408,
+volume=77,
+important="",
+journal={Phys. Rev. B (IF=3.107)}}
+
+
+@article{bauer08-1,
+author={Ernst Bauer and Andriy Grytsiv and Xing-Qiu Chen and
+Nataliya Melnychenko-Koblyuk and  Gerfried Hilscher and
+Heinrich Kaldarar and  Herwig Michor and Esmaeil Royanian and
+Martin Rotter and Raimund Podloucky and Peter Rogl},
+title={BaPt$_4$Ge$_{12}$: A Skutterudite Based Entirely on a Ge
+framework},
+note={},
+year=2008,
+volume=20,
+pages=1,
+journal={Adv. Mat. (IF=7.896)}}
+
+@article{paulboncour08-104225,
+author={V. Paul-Boncour and A. Hoser and K. Hense and E. Gratz and M. Rotter and N. St\"usser},
+title={Magnetic Phase Diagram of HoAg},
+journal={J. Phys. Cond. Mat. (IF=2.038)},
+volume=20,
+note={},
+year=2008,
+pages=104225}
+
+@article{narumi08-53711,
+author={Yasuo Narumi and  Yoshikazu Tanaka and  Noriki Terada and  Martin Rotter and  Koichi
+Katsumata and  Tomoya Fukui and  Masahiro Iwaki and  Koichi Kindo and  Hidenori Toyokawa and 
+Akira Tanaka and  Takanori Tsutaoka and  Tetsuya Ishikawa and Hideo Kitamura},
+title={Magnetization Process and the Associated Lattice Deformations in an
+Intermetallic Compound Gd$_5$Ge$_3$},
+journal={J. Phys. Soc. Jap. (IF=1.926)},
+year=2008,
+note={},
+volume= 77,
+pages= 053711}
+
+@article{doerr08-125,
+author={M. Doerr and S. Raasch and M. Rotter and M. Frontzek and D. C. Meyer and T. Leisegang and M. Zschintzsch and P. Svoboda and M. Loewenhaupt},
+title={Giant magnetostrain based on strong single ion anisotropy of rare earth materials},
+year=2008,
+journal={European Physical Journal Special Topics},
+pages=125,
+volume=158,
+note={}}
+
+@article{melnychenko08-54,
+author={N. Melnychenko-Koblyuk and Andrij Grytsiv and P. Rogl and E. Bauer and R. Lackner and E. Royanian and M. Rotter and G. Giester},
+title={Structure and Physical Properties of Clathrate I Systems},
+year=2008,
+journal={J. Phys. Soc. Jap.},
+volume={Suppl. A. 77},
+pages={54-60}}
+
+@article{melnychenko08-121,
+author={Andrij Grytsiv X. Q. Chen and N. Melnychenko-Koblyuk and P. Rogl and E. Bauer and G. Hilscher and H. Kaldarar and H. Michor and E. Royanian and R. Podloucky and M. Rotter and G. Giester},
+title={Superconductivity and Magnetism in MPt$_4$Ge$_{12}$, M= Ca, Ba, Sr, Eu},
+year=2008,
+journal={J. Phys. Soc. Jap.},
+volume={Suppl. A. 77},
+pages={121-127}}
+
+@article{doerr08-63902,
+author={Mathias Doerr and Wolfram Lorenz and Titus Neupert and Michael Loewenhaupt and Nadja Kozlova and 
+Jens Freudenberger and Marek Bartkowiak and Erik Kampert and Martin Rotter},
+title={Simultaneous Measurement of Magnetization and Magnetostriction in 50 T Pulsed High Magnetic Fields },
+journal={Rev. Sci. Instr. (IF=1.541)},
+year=2008,
+pages=63902,
+volume=79}
+
+
+@article{devishvili09-126002,
+author={A. Devishvili and M. Rotter and M. Doerr and B. Beuneu and G. Behr},
+title={Magnetic Structure of GdCu$_6$},
+volume=21,
+journal={J. Phys. Cond. Mat.},
+year=2009,
+pages=126002}
+
+
+@article{doerr09-42025,
+author={M. Doerr and M. Rotter and A. Devishvili and A. Stunault and J. Perenboom and T. Tsutaoka and A. Tanaka and Y. Narumi and M. Zschintzsch and M. Loewenhaupt},
+title={Magnetostructural irreversibilities in R$_5$Ge$_3$ (R=Nd, Gd) intermetallics},
+journal={J. of Physics: Conference Series},
+year=2009,
+pages=42025}
+
+@article{kataev09-42086,
+author={V. Kataev and U. Schaufuss and F. Muranyi and A. Alfonsov and M. Doerr and M. Rotter and B. B\"uchner},
+title={Magnetic anisotropy of the spin-antiferromagnet GdNi$_2$B$_2$C probed by high-frequency ESR},
+journal={J. of Physics: Conference Series},
+year=2009,
+pages=42086}
+
+@article{doerr09-2291,
+author={M. Doerr and S. Sch\"onecker and A. Haase and E. Kampert and J. A. A. J. Perenboom and M. Richter and M. Rotter and M. S. Kim and M. Loewenhaupt},
+title={High Field Magnetoelastic Quantum Oscillations of Palladium},
+journal={J. of Low Temp. Phys.},
+year=2010,
+pages=20,
+volume=159}
+
+
+
+@article{massalami10-523,
+author={M. el Massalami and R. M. Saeed and C. M. Chaves and H. Takeya and M. Doerr and H. Michor and M. Rotter},
+title={Specific heat investigation on the magnetic phase diagrams of RNi$_2$B$_2$C
+(R= Gd, Er).},
+journal={J. Magn. Magn. Mat.},
+year=2010,
+volume=322,
+pages=523}
+
+
+@Article{doerr10-024422,
+  title = {Competition of two-ion and single-ion anisotropy in rare-earth systems: Large anisotropy example of  $Tb_{5}Ge_{3}$ },
+  author = {Doerr, M.  and Haase, A.  and Loewenhaupt, M.  and Rotter, M.  and Bartkowiak, M.  and Daou, R.  and Kampert, E.  and Perenboom, J. A. A. J. and Tsutaoka, T. },
+  journal = {Phys. Rev. B},
+  volume = {82},
+  number = {2},
+  pages = {024422},
+  numpages = {7},
+  year = {2010},
+  month = {Jul},
+  doi = {10.1103/PhysRevB.82.024422},
+  publisher = {American Physical Society}
+}
+
+
+@Article{blanco10-54414,
+author={J. A. Blanco and B. Fak and E. Ressouce and B. Grenier and M Rotter and D. Schmitt and J. A. Rodriguez-Velamazan and J. Campo and P. Lejay },
+title={Magnetic field and temperature dependence of the amplitude modulated magnetic structure of PrNi$_2$Si$_2$ determined by single crystal neutron diffraction},
+journal={Phys. Rev. B},
+year=2010,
+pages=54414,
+volume=82}
+
+
+@Article{koza10-214301,
+  title = {Vibrational dynamics of the type-I clathrate  $Ba_{8}Zn_{x}Ge_{46-{}x-{}y}?_{y}$   $(x=0,2,4,6,8)$ },
+  author = {Koza, M. M. and Johnson, M. R. and Mutka, H.  and Rotter, M.  and Nasir, N.  and Grytsiv, A.  and Rogl, P. },
+  journal = {Phys. Rev. B},
+  volume = {82},
+  number = {21},
+  pages = {214301},
+  numpages = {11},
+  year = {2010},
+  month = {Dec},
+  doi = {10.1103/PhysRevB.82.214301},
+  publisher = {American Physical Society}
+}
+
+
+% 2011
+
+@article{Daou2011-012111,
+  author =	"R Daou and A Haase and M Doerr and M Rotter and F Weickert and M Nicklas",
+  title =	"Magnetoelastic quantum oscillations in GdSb to 55 T",
+  journal =	"Journal of physics. Conference series",
+  year =	"2011",
+  volume =	"273",
+  pages =	"012111-012111",
+  issn =	"1742-6588",
+  doi =	"10.1088/1742-6596/273/1/012111",
+  url =	"http://tinyurl.sfx.mpg.de/rs63",
+}
+
+
+
+@Article{severing11-155112,
+  title = {Crystal fields in YbInNi$_{4}$ determined with magnetic form factor and inelastic neutron scattering},
+  author = {Severing, A.  and Givord, F.  and Boucherle, J.-X.  and Willers, T.  and Rotter, M.  and Fisk, Z.  and Bianchi, A.  and Fernandez-Diaz, M. T. and Stunault, A.  and Rainford, B. D. and Taylor, J.  and Goremychkin, E. },
+  journal = {Phys. Rev. B},
+  volume = {83},
+  number = {15},
+  pages = {155112},
+  numpages = {6},
+  year = {2011},
+  month = {Apr},
+  doi = {10.1103/PhysRevB.83.155112},
+  publisher = {American Physical Society}
+}
+
+
+@article{mehboob11-1112,
+title={Thermal expansion and magnetostriction of GdAg$_2$, and relations to the magnetoelastic paradox},
+author={ Nasir  Mehboobb  and Martin  Rotter and    Mathias  Doerr and  Esmaeil Royanian and Herbert M\"uller and  Andriy Grytsiv and Yurii Scourski},
+journal={Solid State Comm.},
+year=2011,
+pages=1112,
+volume=151}
+
+@article{rotter11-012005,
+  author={M Rotter and M D Le and H Lewtas and A T Boothroyd and J A Blanco and R Hammerling},
+  title={Calculation of Atomic Charge- Moment- and Current densities using McPhase, a versatile modelling suite for Magnetic Neutron Scattering},
+  journal={Journal of Physics: Conference Series},
+  volume={325},
+  number={1},
+  pages={012005},
+  url={http://stacks.iop.org/1742-6596/325/i=1/a=012005},
+  year={2011},
+  abstract={Information on the anisotropy of the atomic magnetic moment density can be obtained from neutron scattering. Within the dipole approximation the effect of the anisotropy is usually neglected. We show how the anisotropy of the charge-, spin-, orbital moment and current densities of an unfilled shell can be calculated. The theoretical formulae have been implemented in the McPhase software suite. We illustrate the theory for some representative examples of different magnetic ions in an idealized crystal field. Moreover, we also evaluate the various densities for some real systems.}
+}
+
+
+
+@article{rotter11-012008,
+  author={M Rotter and B Fåk and J A Blanco},
+  title={Magnetic excitations in the longitudinally amplitude modulated magnetic structure of PrNi 2 Si 2},
+  journal={Journal of Physics: Conference Series},
+  volume={325},
+  number={1},
+  pages={012008},
+  url={http://stacks.iop.org/1742-6596/325/i=1/a=012008},
+  year={2011},
+  abstract={Interest in PrNi 2 Si 2 has been renewed recently because the magnetic structure remains longitudinally amplitude modulated down to low temperatures as inferred from single–crystal neutron diffraction. Based on a dynamical matrix diagonalisation (DMD) formalism considering exchange and crystal field interactions, we have calculated the dispersion of the magnetic excitations of PrNi 2 Si 2 below the Néel temperature. The prediction of a low-energy soft-mode excitations around the scattering vector (0,0, Q z ) within the first Brillouin zone, where Q z ? k z = 0.875 is the value of the propagation vector of the magnetic structure, is in good agreement with the experimental results obtained from inelastic neutron scattering.}
+}
+
+
+@article{le11-36002,
+  author={M D Le and K A McEwen and M Rotter and J Jensen and R I
+Bewley and T Guidi and D Fort},
+  title={Dispersive crystal field excitations and quadrupolar
+interactions in UPd$_3$},
+  journal={Journal of Physics: Condensed Matter},
+  volume={24},
+  number={3},
+  pages={036002},
+  url={http://stacks.iop.org/0953-8984/24/i=3/a=036002},
+  year={2012},
+}
+
+@article{bortolozo12-123912,
+author = {A. D. Bortolozo and C. A. M. dos Santos and R. F. Jardim and C. Ritter and A. Devishvili and M. Rotter and F. G. Gandra and A. J. S. Machado},
+collaboration = {},
+title = {Interstitial doping induced superconductivity at 15.3 K in Nb[sub 5]Ge[sub 3] compound},
+publisher = {AIP},
+year = {2012},
+journal = {Journal of Applied Physics},
+volume = {111},
+number = {12},
+eid = {123912},
+numpages = {6},
+pages = {123912},
+keywords = {BCS theory; coherence length; Debye temperature; germanium compounds; interstitials; magnetic susceptibility; magnetoresistance; neutron diffraction; niobium compounds; specific heat; superconducting critical field; type II superconductors},
+url = {http://link.aip.org/link/?JAP/111/123912/1},
+doi = {10.1063/1.4730611}
+}
+
+@article{mikhailova12-134409,
+  title = {Magnetic properties and crystal structure of Sr${}_{3}$CoIrO${}_{6}$ and Sr${}_{3}$NiIrO${}_{6}$},
+  author = {Mikhailova, D. and Schwarz, B. and Senyshyn, A. and Bell, A. M. T. and Skourski, Y. and Ehrenberg, H. and Tsirlin, A. A. and Agrestini, S. and Rotter, M. and Reichel, P. and Chen, J. M. and Hu, Z. and Li, Z. M. and Li, Z. F. and Tjeng, L. H.},
+  journal = {Phys. Rev. B},
+  volume = {86},
+  issue = {13},
+  pages = {134409},
+  numpages = {13},
+  year = {2012},
+  month = {Oct},
+  doi = {10.1103/PhysRevB.86.134409},
+  url = {http://link.aps.org/doi/10.1103/PhysRevB.86.134409},
+  publisher = {American Physical Society}
+}
+
+
+@article{hu12-123025,
+  author={Z Hu and Hua Wu and T C Koethe and S N Barilo and S V Shiryaev and G L Bychkov and C Schüßler-Langeheine and T Lorenz and A Tanaka and H
+H Hsieh and H-J Lin and C T Chen and N B Brookes and S Agrestini and Y-Y Chin and M Rotter and L H Tjeng},
+  title={Spin-state order/disorder and metal–insulator transition in GdBaCo 2 O 5.5 : experimental determination of the underlying electronic structure},
+  journal={New Journal of Physics},
+  volume={14},
+  number={12},
+  pages={123025},
+  url={http://stacks.iop.org/1367-2630/14/i=12/a=123025},
+  year={2012},
+  abstract={We have investigated the electronic structure of GdBaCo 2 O 5.5 across the metal–insulator transition (MIT) using soft x-ray absorption and photoelectron spectroscopy. For the low-temperature insulating phase, we find that half of the Co 3+ ions at the octahedral sites are in the low spin (LS) and the other half in the high spin (HS) state, while the Co 3+ ions at the pyramidal sites are in the HS configuration. Upon increasing the temperature across the MIT, part of the LS octahedral Co 3+ undergoes a spin-state transition into the HS configuration. We infer that this destroys the spin-state ordering and thus explains the decrease in resistivity. We observed that the band gap is reduced but not closed in the high-temperature phase.}
+}
+
+
+@article{normile13-054413,
+  title = {Magnetic ordering in GdNi${}_{2}$B${}_{2}$C revisited by resonant x-ray scattering: Evidence for the double-$q$ model},
+  author = {Normile, P. S. and Rotter, M. and Detlefs, C. and Jensen, J. and Canfield, P. C. and Blanco, J. A.},
+  journal = {Phys. Rev. B},
+  volume = {88},
+  issue = {5},
+  pages = {054413},
+  numpages = {7},
+  year = {2013},
+  month = {Aug},
+  doi = {10.1103/PhysRevB.88.054413},
+  url = {http://link.aps.org/doi/10.1103/PhysRevB.88.054413},
+  publisher = {American Physical Society}
+}
+
+
 @article{le12-036002,
   author={M D Le and K A McEwen and M Rotter and J Jensen and R I Bewley and T Guidi and D Fort},
   title={Dispersive crystal field excitations and quadrupolar interactions in UPd 3},
