--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -80,6 +80,14 @@ community this program would not have come into existence.
 
 \section*{What is New ?}
 
+\subsection*{ ... in version 5.1 ...}
+\begin{itemize}
+\item parallel processing: the number of parallel threads can be chosen either in a system variable
+MCPHASE\_NOFTHREADS , or setting in mcdisp.par and mcphas.ini nofthreads=2, or if nothing is 
+specified the programs attempt to determine the available number of cores automatically
+\item powdermagnon extended to nonortholattices 
+\end{itemize}
+
 \subsection*{ ... in version 5.0 ...}
 \begin{itemize}
 \item programs mcdiff, mcdisp, ansitropy make use of parallel processing (compiled for 2 
@@ -356,7 +364,7 @@ UPd$_3$ & dispersive CEF excitations, quadrupolar interactions  & {\prg so1ion}\
 
 
 Some publications referencing Mcstas: %%@
-\cite{rotter02-751,rotter02-8885,rotter03-144418,rotter03-mass,rotter03-x,rotter04-231,rotter04-xxxx}
+\cite{rotter12-213201,rotter02-751,rotter02-8885,rotter03-144418,rotter03-mass,rotter03-x,rotter04-231,rotter04-xxxx,blanco13-104411,lewtas10-184420,rotter09-140405,mazumdar08-144422,loewenhaupt06-775}
 
 
 
