bug in cluster dmqcalc removed bug in convolute2d removed

--- a/doc/extsimod.tex
+++ b/doc/extsimod.tex
@@ -1030,7 +1030,8 @@ The meaning of the symbols follows exactly that of function
  \begin{equation}\label{scattop}
  \hat  \mbf Q \times (\hat \mathcal Q \times \hat \mbf  Q) = \frac{-1}{2\mu_B} 
  \hat  \mbf Q \times (\mbf M(\mbf Q) \times \hat \mbf  Q) =\frac{-1}{2\mu_B} \int d\mbf r
-    \hat  \mbf Q \times (\mbf M(\mbf r) \times \hat \mbf  Q)
+e^{i\mbf Q \mbf r} \left [ 
+   \hat  \mbf Q \times (\mbf M(\mbf r) \times \hat \mbf  Q) \right ]
  \end{equation}
  
  Note that the magnetisation density consists of two contributions $\mbf M(\mbf r)=\mbf M_S(\mbf r)+\mbf M_L(\mbf %%@
