--- a/doc/additional_programs.tex
+++ b/doc/additional_programs.tex
@@ -60,6 +60,38 @@ valence (oxidation state) of that ion is. This information may also be given by 
 mode, with the following command: "{\prg cif2mcphas $\langle$INPUT.CIF$\rangle$ -i}" (e.g. by including
 the switch {\prg -i} (or {\prg --interactive}) before or after the CIF input filename). The online help
 may be access by invoking the program without arguments or with the {\prg -h} ({\prg --help}) switch.
+Finally, if you do not have a CIF of the structure you want to calculate, you can use the template here:
+
+\begin{verbatim}
+; Please replace text in square brackets [] with your data
+_cell_length_a                     [a_in_Angstrom]
+_cell_length_b                     [b_in_Angstrom]
+_cell_length_c                     [b_in_Angstrom]
+_cell_angle_alpha                  [alpha_in_degrees]
+_cell_angle_beta                   [beta_in_degrees]
+_cell_angle_gamma                  [gamma_in_degrees]
+; The H-M symbol generally needed by cif2mcphas but some spacegroups
+; which have only one setting can be identified purely by the number.
+; Most orthorhombic or low symmetry spacegroups have multiple centring,
+; origin choices or unique axes which will require an H-M symbol.
+; If this is the case, and you give just the spacegroup number,
+; cif2mcphas may return with an error.
+; If you don't use one of these fields, you must comment it out, by
+; putting a ";" or "#" at the start of the line.
+_symmetry_space_group_name_H-M     [Hermann-Maguin_symbol_with_spaces]
+_symmetry_Int_Tables_number        [SpacegroupNumber]
+; At the end of the file, please list the non-equivalent
+; sites' fractional coordinates of this structure.
+loop_
+_atom_site_label
+_atom_site_fract_x
+_atom_site_fract_y
+_atom_site_fract_z
+[AtomSite] [x_coord] [y_coord] [z_coord]
+\end{verbatim}
+
+replacing instances of e.g. [AtomSite] or [x\_coord] with the site name and fraction $x$-coordinate, etc.
+This template can also be generated using the command "{\prg cif2mcphas -c}" or "{\prg cif2mcphas --create}".
 See also: {\prg icsdread} which downloads and creates a CIF from an entry of the (free) Korean ICSD mirror.
 
 \item [\prg cpsingleion 10 100 1 file.levels.cef {[options]}: ] 
